<resources>
    <string name="app_name">Inform ATU</string>
    <string name="inform_terrorism">অপরাধের তথ্য দিন</string>
    <string name="splash_text"><![CDATA[<html><body><big>Anti Terrorism Unit </big><br/>Bangladesh Police</body><html>]]></string>
    <string name="cyber_crime_en">Cyber Crime</string>
    <string name="terrorism_en">Terrorism/Extremism</string>
    <string name="bomb_en">Bomb/Explosive/Arms</string>
    <string name="organaizational_crime_en">Organaizational crime</string>
    <string name="wanted_en">Wanted</string>
    <string name="information_en">Information Cell</string>
    <string name="a"> চিহ্নিত অংশ অবশ্যই পূরণ করতে হবে।</string>
    <string name="b"> চিহ্নিত অংশ অবশ্যই পূরণ করতে হবে।</string>
    <string name="c"> চিহ্নিত অংশ অবশ্যই পূরণ করতে হবে।</string>
    <string name="d"> চিহ্নিত অংশ অবশ্যই পূরণ করতে হবে।</string>
    <string name="terrorism_bn">জঙ্গিবাদ/ উগ্রবাদ</string>
    <string name="cyber_crime_bn"> সাইবার অপরাধ</string>
    <string name="bomb_bn">বোমা/ বিস্ফোরণ </string>
    <string name="organaizational_crime_bn">সংগঠিত অপরাধ</string>
    <string name="wanted_bn">ওয়ান্টেড</string>
    <string name="information_bn">তথ্য কনিকা</string>
    <string name="user_menu">ব্যবহার নির্দেশিকা\n User Manual </string>
    <string name="unit_details">ইউনিট পরিচিতি\n Unit Details </string>
    <string name="news_feed">সংবাদ পরিক্রমা\n News Feed </string>
    <string name="anonymous_chat">বেনামী আলাপন\n Anonymous Chat </string>
    <string name="copy_right">সর্বসত্ব সংরক্ষিত</string>
    <string name="crime_info">অপরাধের তথ্য (Crime Information)</string>
    <string name="type_here">এইখানে টাইপ করুন...</string>
    <string name="marque_text"> ***Inform ATU তে আপনাকে স্বাগতম. ****অনুগ্রহ করে অপরাধ সংক্রান্ত আপনার মূল্যবান তথ্য আমাদের পাঠান . ***সর্বদা আমাদের দেশকে যেকোনো ধরনের হুমকি থেকে রক্ষা করতে আমরা প্রতিশ্রুতিবদ্ধ.  </string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="division">বিভাগ</string>
    <string name="districs">জেলা</string>
    <string name="thana">থানা</string>
    <string name="inform_info">তথ্য দাতার পরিচয় (ঐচ্ছিক এবং গোপন রাখা হবে)</string>
    <string name="inform_name">তথ্য দাতার নাম </string>
    <string name="phone_number">ফোন নম্বর</string>
    <string name="address">ঠিকানা</string>
    <string name="nid">জাতীয় পরিচয়পত্র</string>
    <string name="email"> ই-মেইল</string>
    <string name="aditional_info">প্রদত্ত তথ্য সংক্রান্ত কোন ছবি,ডকুমেন্ট,ভিডিও বা অডিও যদি থাকে সংযুক্ত করুন</string>
    <string name="picture">ছবি</string>
    <string name="video">ভিডিও</string>
    <string name="audio">অডিও</string>
    <string name="document">ডকুমেন্ট</string>
    <string name="new_info">নতুন তথ্য</string>
    <string name="info_edit">তথ্য সংশোধন</string>
    <string name="mohanogor_district_bdout">যে কোন একটি নির্বাচন করুন।</string>
    <string name="mohanogor">মহানগর</string>
    <string name="district">জেলা</string>
    <string name="bdout">বাংলাদেশের বাইরে</string>
    <string name="division_selection"> মহানগরের নাম নির্বাচন করুন </string>
    <string name="div_dhaka">ঢাকা</string>
    <string name="div_chittagong">চট্টগ্রাম</string>
    <string name="div_rajshai">রাজশাহী</string>
    <string name="div_khulna">খুলনা</string>
    <string name="div_barishal">বরিশাল</string>
    <string name="div_sylhet">সিলেট</string>
    <string name="div_rongpur">রংপুর</string>
    <string name="div_mymensing">ময়মনসিংহ</string>
    <string name="district_selection"> জেলার নাম নির্বাচন করুন </string>
    <string name="dst_gazipur">গাজীপুর</string>
    <string name="dst_faridpur">ফরিদপুর</string>
    <string name="dst_shariatpur">শরিয়তপুর</string>
    <string name="dst_madaripur">মাদারিপুর</string>
    <string name="dst_gopalgonj">গোপালগঞ্জ</string>
    <string name="dst_kishorgonj">কিশোরগঞ্জ</string>
    <string name="dst_manikgonj">মানিকগঞ্জ</string>
    <string name="dst_munsigonj">মুন্সিগঞ্জ</string>
    <string name="dst_narayangonj">নারায়নগঞ্জ</string>
    <string name="dst_norsingdi">নরসিংদী</string>
    <string name="dst_rajbari">রাজবাড়ী</string>
    <string name="dst_tangail">টাঙ্গাইল</string>
    <string name="country_selection"> দেশের নাম নির্বাচন করুন </string>
    <string name="dst_coxbazar">কক্সবাজার</string>
    <string name="dst_khagrachori">খাগড়াছড়ি</string>
    <string name="dst_rangamati">রাঙ্গামাটি</string>
    <string name="dst_bandorban">বান্দরবান</string>
    <string name="dst_feni">ফেনী</string>
    <string name="dst_noakhali">নোয়াখালী</string>
    <string name="dst_lakshmipur">লক্ষ্মীপুর</string>
    <string name="dst_chandpur">চাঁদপুর</string>
    <string name="dst_comilla">কুমিল্লা</string>
    <string name="dst_bbaria">ব্রাহ্মণবাড়িয়া</string>
    <string name="notSupported">file not supported</string>
    <string name="dst_sunamgonj">সুনামগঞ্জ</string>
    <string name="dst_hobigonj">হবিগঞ্জ</string>
    <string name="dst_mowlobibazar">মৌলভীবাজার</string>
    <string name="type_audio">audio/*</string>
    <string name="type_video">video/*</string>
    <string name="type_docs">application/pdf</string>
    <string name="india">ইন্ডিয়া</string>
    <string name="america">আমেরিকা</string>
    <string name="canada">কানাডা </string>
    <string name="austrelia">অস্ট্রেলিয়া </string>
    <string name="japan">জাপান </string>
    <string name="russia">রাশিয়া </string>
    <string name="china">চীন </string>
    <string name="indoneshia">ইন্দোনেশিয়া </string>
    <string name="srilanka">শ্রীলঙ্কা </string>
    <string name="pakisthan">পাকিস্তান </string>
    <string name="katar">কাতার </string>
    <string name="image_folder_path">/Android/Data/ImageStorage</string>
    <string name="terrorism_info"><![CDATA[<html><body><big>অপরাধের তথ্য দিন </big><br/><font size=5>Report Crime </font><br/><small>(তথ্য দাতার পরিচয় গোপন রাখা হবে)</small></body><html>]]></string>
    <string name="SorryText">SORRY! FOR SOMETHING WENT WRONG.</string>
    <string name="occurrence_place">ঘটনাস্থল  (Place of Occurrence)</string>
    <string name="app_name_bn">এন্টিটেরোরিজম ইউনিট \n বাংলাদেশ পুলিশ</string>
    <string name="unit_detail_text">

      \nIf we think about the Holy Artisan Bakery attack, apart from the bloodshed and image crisis of our country in international arena, it also lessened the investment of foreign countries to ours. Bangladesh Police and ATU is working to prevent terrorism so that, this country can make up this economic man-made disaster and make our economy keep growing. Now-a-days, terrorism and militancy has been much affecting to the world. Its very much important for all of us to prevent us from this disaster.
        \n\nTo root outradicalism, extremism and militancy from the country, Bangladesh government has declared “Zero Tolerance” and Anti-Terrorism Unit (ATU) of Bangladesh Police is a result of this philosophy. ATU is committed to the endeavor of rendering upon a full fledge dedicated, responsive and professional police unit to combat against terrorism, extremism and violence.
        \n\nATU has a nationwide jurisdiction to combat militancy and terrorism and is also assigned with combating cybercrimes, terror financing and creating mass awareness against terrorism, violent extremism and radicalization. This unit is an intelligence based and modern technology depended one and working as a self sustained organization.
        \n\nATU is continuing to work under the super observation of an Addl. Inspector General of   Police (Addl. IGP). Having Five Major wings, ATU is operating fully to its current capacity. The full-fledged unit with advanced technology and arms is working to resist the terrors and radicals outfit organizations and maintaining the law and order for public safety. ATU is gathering intelligence and taking preventive measures to curb terrorism besides trying to create resource and action plan to correct the misguided people with explanations from the Holy Quran and the Hadith. This unit is promised to play the biggest role in efforts to free Bangladesh from terrorism and militancy.
        \n\nThe people of this country have always been the driving force against every crisis this nation has ever faced and this time is no exception. With the help and goodwill of people, ATU will diminish all the extremist and terrorist activities to ashes which ATU is committed to.

    </string>
    <string name="user_manual_text">



        অপরাধের তথ্য
\n\nএই বক্সে আপনার দেখা বা শুনা বা জানা ঘটনার বিবরণ লিখুন।
\n\nঘটনাস্থল
\n\nএর অধীনে থাকা ঘরগুলোর ড্রপডাউন বাটনে ক্লিক করে আপনার দেখা বা শুনা বা জানা ঘটনার সাথে সংশ্লিষ্ট স্থানসমূহ নির্বাচন করুন।
\n\n তথ্যদাতার পরিচয়
\n\n আপনি যদি আপনার পরিচয় দিতে চান তাহলে এর অধীনে থাকা ঘর গুলোতে তথ্য দিন। (তথ্যদাতার পরিচয় প্রদান সম্পূর্ণ ঐচ্ছিক, তবে প্রদত্ত তথ্য গোপন রাখা হবে)
\n\nটেক্সট/পিডিএফ/ছবি/ভিডিও/অডিও সংযুক্তকরণ
\n\nআপানার প্রদত্ত তথ্য সংক্রান্ত কোন টেক্সট/পিডিএফ/ছবি/ভিডিও/অডিও যদি থাকে তা সংশ্লিষ্ট বাটনে ক্লিক করে সংযুক্ত করতে পারবেন।
\n\nSUBMIT/CANCEL বাটন
\n\nঅপরাধের তথ্য, ঘটনাস্থলের তথ্য, তথ্যদাতার পরিচয়, প্রদত্ত তথ্য সংক্রান্ত টেক্স/পিডিএফ/ছবি/ভিডিও/অডিও সংযুক্তকরণ পূর্বক “SUBMIT” বাটনে ক্লিক করলে “তথ্য প্রেরণের জন্য আপনাকে ধন্যবাদ। আপনার প্রেরিত তথ্যের আইডি নম্বর..........। প্রয়োাজনে এই তথ্যটি আপনি সংশোধন, সংযোজ অথবা এতদসংক্রান্তে আমাদের সাথে ‘বেনামী আলাপন’ করতে পারবেন।” ম্যাসেজ সম্বলিত পপআপ আসবে। পপআপ হতে ‘ঠিক আছে’ বাটনে ক্লিক করলে আপনার প্রদত্ত তথ্য দাখিল হবে।
\n\nঅপরাধের তথ্য, ঘটনাস্থলের তথ্য, তথ্যদাতার পরিচয়, প্রদত্ত তথ্য সংক্রান্ত টেক্সট/পিডিএফ/ছবি/ভিডিও/অডিও সংযুক্তকরার পরেও আপনি তথ্য প্রেরণ করতে না চাইলে “CANCEL” বাটনে ক্লিক করুন।


        









    </string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successful_message">Form Filled Up Successfully</string>
    <string name="failed_message">Unable to submit form. please try again</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="gulshan">গুলশান</string>
    <string name="adabor">আদাবর</string>
    <string name="airport">বিমানবন্দর</string>
    <string name="badda">বাড্ডা</string>
    <string name="banani">বনানী</string>
    <string name="bongshal">বংশাল</string>
    <string name="vashantec">ভাষানটেক</string>
    <string name="cantornment">সেনানিবাস</string>
    <string name="chalkbazar">চকবাজার</string>
    <string name="darussalam">দারুসালাম</string>
    <string name="dokkhinkhan">দক্ষিণখান</string>
    <string name="dhanmondi">ধানমন্ডি</string>
    <string name="gendaria">গেন্ডারিয়া</string>
    <string name="hazaribugh">হাজারীবাগ</string>
    <string name="jatrabari">যাত্রাবাড়ী</string>
    <string name="kodomtoli">কদমতলী</string>
    <string name="kafrul">কাফরুল</string>
    <string name="kolabagan">কলাবাগান</string>
    <string name="kamrangichor">কামরাঙ্গীরচর</string>
    <string name="khilgaon">খিলগাঁও</string>
    <string name="khilkhet">খিলক্ষেত</string>
    <string name="kotowali">কোতোয়ালী</string>
    <string name="lalbagh">লালবাগ</string>
    <string name="mirpur_model">মিরপুর মডেল</string>
    <string name="mohummedpur">মোহাম্মদপুর</string>
    <string name="motijhel">মতিঝিল</string>
    <string name="mugda">মুগদা</string>
    <string name="notun_bazar">নতুন বাজার</string>
    <string name="pollobi">পল্লবী</string>
    <string name="paltan_model">পল্টন মডেল</string>
    <string name="ramna_model">রমনা মডেল</string>
    <string name="rampura">রামপুরা</string>
    <string name="rupnagar">রূপনগর</string>
    <string name="sobujbug">সবুজবাগ</string>
    <string name="sha_ali">শাহ আলী</string>
    <string name="shabug">শাহবাগ</string>
    <string name="sherebangla_nogor">শেরেবাংলা নগর</string>
    <string name="shempur">শ্যামপুর</string>
    <string name="sutrapur">সূত্রাপুর</string>
    <string name="shajahanpur">শাজাহানপুর</string>
    <string name="comming_soon">Comming Soon...</string>
</resources>