<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ten"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/crime_info"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cell_border"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/type_here"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_weight="1"
            android:text="@string/division"
            android:gravity="bottom"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spDivision"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_weight="2"
            android:background="@drawable/cell_border" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/districs"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spDistrict"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_weight="2"
            android:background="@drawable/cell_border" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/thana"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spThana"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_weight="2"
            android:background="@drawable/cell_border" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/inform_info"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cell_border"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/fourty"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/cell_border"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/seventy"
            android:layout_weight="1"
            android:text="@string/aditional_info"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred_fifty"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="14.5">

            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/hundred"
                android:layout_weight="3"
                android:background="@drawable/cell_border"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="2"
                    android:background="@color/transparent"
                    android:padding="@dimen/ten"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/picture"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twelve"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/hundred"
                android:layout_weight="3"
                android:background="@drawable/cell_border"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="2"
                    android:background="@color/transparent"
                    android:padding="@dimen/ten"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_video" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/video"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twelve"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/hundred"
                android:layout_weight="3"
                android:background="@drawable/cell_border"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="2"
                    android:background="@color/transparent"
                    android:padding="@dimen/ten"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_microphone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/audio"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twelve"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/hundred"
                android:layout_weight="3"
                android:background="@drawable/cell_border"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="2"
                    android:background="@color/transparent"
                    android:padding="@dimen/ten"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_document" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/document"
                    android:textColor="@color/black"
                    android:textSize="@dimen/twelve"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight=".5" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>